--- a/nginx/反向代理基础配置.md
+++ b/nginx/反向代理基础配置.md
@@ -7,6 +7,9 @@
 
 > include vhost/*.conf; 
 
+
+> 跨域
+
 ```shell
 
 server {
@@ -22,9 +25,32 @@ server {
     access_log  logs/bdatu.log;
 
     location / {
-        proxy_pass http://dili.bdatu.com;
+        # 反向代理到 http://dili.bdatu.com
+        proxy_pass http://dili.bdatu.com; 
         add_header Access-Control-Allow-Origin *;
     }
+}
+
+```
+
+#### 示例
+
+> Gzip
+
+```shell
+
+location ~ .*\. (jpg|png|gif)$ {    
+    gzip off; # 关闭压缩    
+    root /data/www/images;
+}
+
+location ~ .*\. (html|js|css)$ {    
+    gzip on; # 启用压缩    
+    gzip_min_length 1k; # 超过1K的文件才压缩    
+    gzip_http_version 1.1; # 启用gzip压缩所需的HTTP最低版本    
+    gzip_comp_level 9; # 压缩级别，压缩比率越高，文件被压缩的体积越小    
+    gzip_types text/css application/javascript; # 进行压缩的文件类型    
+    root /data/www/html;
 }
 
 ```
