--- a/Bolg/常用正则表达式.md
+++ b/Bolg/常用正则表达式.md
@@ -11,4 +11,24 @@ const regExp = new RegExp(/^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)
 
 const regExp = new RegExp(/^1[3|4|5|6|7|8|9][0-9]\d{8}$/);
 
-````
+```
+
+
+#### 是否为 mac 系统（包含 iphone 手机）
+
+```js
+const isMac = function () {
+  return /Macintosh|Mac OS X/i.test(navigator.userAgent);
+};
+
+```
+
+
+#### 是否为 windows 系统
+
+```js
+const isWindows = function () {
+  return /windows|win32/i.test(navigator.userAgent);
+};
+
+```
