--- a/Bolg/公会/公会系统问题收集.md
+++ b/Bolg/公会/公会系统问题收集.md
@@ -1,4 +1,4 @@
-1.全角大于和小于符号问题，导致v-html不能正确渲染html标签
+1.全角大于和小于符号问题，导致 v-html 不能正确渲染 html 标签
 
 ```javascript
 // 全角转换为半角函数
@@ -23,10 +23,10 @@ toHalf(str) {
 
 ```json
 {
-    amount: 0, // 表示当前等级贡献值
-    levelInfo: {
-        amount: 0, // 升级下一级所需贡献值
-    }
+  "amount": 0, // 表示当前等级贡献值
+  "levelInfo": {
+    "amount": 0 // 升级下一级所需贡献值
+  }
 }
 ```
 
@@ -38,9 +38,9 @@ toHalf(str) {
 
 升级目标贡献值为：500000
 
-x = (1024 / 500000) * 100;
+x = (1024 / 500000) \* 100;
 
-4.房间标签动画 
+4.房间标签动画
 
 ```css
 .tag-anima {
@@ -64,17 +64,27 @@ x = (1024 / 500000) * 100;
   }
 }
 @keyframes bar {
-  0%   {transform: scale(1, 0.25); }
-  25%  {transform: scale(1, 0.5); }
-  50%  {transform: scale(1, 0.75); }
-  75%  {transform: scale(1, 1); }
-  100% {transform: scale(1, 1.25);}
+  0% {
+    transform: scale(1, 0.25);
+  }
+  25% {
+    transform: scale(1, 0.5);
+  }
+  50% {
+    transform: scale(1, 0.75);
+  }
+  75% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(1, 1.25);
+  }
 }
 ```
 
 5.测试用户
 
-公会主键ID： id: 1
+公会主键 ID： id: 1
 
 1. uid: 90293691 李白故里
 2. uid: 90293787 浴巾
@@ -97,12 +107,12 @@ window.webkit.messageHandlers.clipboardToPhone.postMessage(str);
 window.androidJsObj.clipboardToPhone(str);
 ```
 
-2.跳转公会群组方法(jumpAppointPage, 需提供跳转类型type和参数val给h5这边)
+2.跳转公会群组方法(jumpAppointPage, 需提供跳转类型 type 和参数 val 给 h5 这边)
 
 ```javascript
 let jumpObj = {
-  	routerType: 'GROUP_PAGE', // 跳转到群组
-    routerVal: null, // 群ID
+  routerType: "GROUP_PAGE", // 跳转到群组
+  routerVal: null, // 群ID
 };
 // ios
 window.webkit.messageHandlers.jumpAppointPage.postMessage(jumpObj);
@@ -111,7 +121,7 @@ window.webkit.messageHandlers.jumpAppointPage.postMessage(jumpObj);
 window.androidJsObj.jumpAppointPage(JSON.stringify(jumpObj));
 ```
 
-3.关闭webView方法
+3.关闭 webView 方法
 
 ```javascript
 // ios
@@ -121,7 +131,7 @@ window.webkit.messageHandlers.closeWebView.postMessage();
 window.androidJsObj.closeWebView();
 ```
 
-###### 公会系统客户端H5访问地址
+###### 公会系统客户端 H5 访问地址
 
 公会名片
 
@@ -129,11 +139,11 @@ window.androidJsObj.closeWebView();
 
 我的公会
 
-/bibi/modules/project/index.html#/guildLoading?fullScreen=1&from=native&redirect=guildMe 
+/bibi/modules/project/index.html#/guildLoading?fullScreen=1&from=native&redirect=guildMe
 
 公会榜单
 
-/bibi/modules/project/index.html#/guildLoading?fullScreen=1&from=native&redirect=guildTop 
+/bibi/modules/project/index.html#/guildLoading?fullScreen=1&from=native&redirect=guildTop
 
 公会成员
 
@@ -141,10 +151,10 @@ window.androidJsObj.closeWebView();
 
 ##### 地址栏参数描述
 
-|            | 参数                                      | 描述                                    |
-| ---------- | :---------------------------------------- | --------------------------------------- |
-| uid        | 用户uid                                   | 用户查看他人公会名片需要带上uid参数     |
-| guildId    | 公会id                                    | 用户查看他人公会名片需要带上guildId参数 |
-| fullScreen | 1:隐藏  0:不隐藏                          | 是否隐藏导航栏                          |
-| from       | native                                    | 来源，表示第一次打开由客户端进入H5      |
-| redirect   | 如: redirect=guildMe 表示访问我的公会页面 | 路由重新定向地址                        |
+|            | 参数                                      | 描述                                      |
+| ---------- | :---------------------------------------- | ----------------------------------------- |
+| uid        | 用户 uid                                  | 用户查看他人公会名片需要带上 uid 参数     |
+| guildId    | 公会 id                                   | 用户查看他人公会名片需要带上 guildId 参数 |
+| fullScreen | 1:隐藏 0:不隐藏                           | 是否隐藏导航栏                            |
+| from       | native                                    | 来源，表示第一次打开由客户端进入 H5       |
+| redirect   | 如: redirect=guildMe 表示访问我的公会页面 | 路由重新定向地址                          |
