--- a/Bolg/流程.md
+++ b/Bolg/流程.md
@@ -17,78 +17,74 @@
 
 ```json
 {
-    code: 200,
-    data: "eyJhbGciOiJIUzUxMiJ9.eyJsb2dpbl91c2VyX2tleSI6IjQ5MDI3NTUxMGMzZjRhZjE5OTkzMjNlNWJiMTgzNTk3In0.lDgNqffNUkbcU3GeVwp6MSWU8ea9nqwtNP2XDKG3oo5IzRsrJGCdeBrjqD-18A9ZmZbcvlogDAQ4TFvQCk7WgA"
-    message: "sucess",
-    timestamp: 1605496810696
+  code: 200,
+  data: "eyJhbGciOiJIUzUxMiJ9.eyJsb2dpbl91c2VyX2tleSI6IjQ5MDI3NTUxMGMzZjRhZjE5OTkzMjNlNWJiMTgzNTk3In0.lDgNqffNUkbcU3GeVwp6MSWU8ea9nqwtNP2XDKG3oo5IzRsrJGCdeBrjqD-18A9ZmZbcvlogDAQ4TFvQCk7WgA"
+  message: "sucess",
+  timestamp: 1605496810696
 }
 
 ```
 
-
-> /api/getSysUserInfo 
+> /api/getSysUserInfo
 
 ```json
-
-{   
-    code: 200,
-    data: {
-        permissions: ["*:*:*"],
-        roles: ["admin"],
-        user: {
-            createtime: 1594957843000,
-            email: "",
-            headimg: "https://img.cdsfl8888.com/admin_moren.jpg",
-            id: 134,
-            lastlogin: 1587140542000,
-            password: "",
-            phone: "",
-            qq: "",
-            status: true,
-            username: "linchang"
-        }
-    },
-    message: "sucess",
-    timestamp: 1605496810696
+{
+  "code": 200,
+  "data": {
+    "permissions": ["*:*:*"],
+    "roles": ["admin"],
+    "user": {
+      "createtime": 1594957843000,
+      "email": "",
+      "headimg": "https://img.cdsfl8888.com/admin_moren.jpg",
+      "id": 134,
+      "lastlogin": 1587140542000,
+      "password": "",
+      "phone": "",
+      "qq": "",
+      "status": true,
+      "username": "linchang"
+    }
+  },
+  "message": "sucess",
+  "timestamp": 1605496810696
 }
-
 ```
-
 
 > /api/getRouters
 
 ```json
 
 {
-    code: 200,
-    data: [
-        {
-            alwaysShow: true,
-            children: [
-                {
-                    component: "/system/user",
-                    hidden: false,
-                    meta: {
-                        icon: "",
-                        title: "用户管理"
-                    },
-                    name: "User",
-                    path: "user"
-                }
-            ],
-            component: "Layout",
-            hidden: false,
-            meta: {
-                icon: "setting",
-                title: "系统管理"
-            },
-            name: "System",
-            path: "/system",
-            redirect: "noRedirect"
-        }
-    ]
-    message: "success",
-    timestamp: 1605506977055
+  code: 200,
+  data: [
+      {
+        alwaysShow: true,
+        children: [
+            {
+                component: "/system/user",
+                hidden: false,
+                meta: {
+                    icon: "",
+                    title: "用户管理"
+                },
+                name: "User",
+                path: "user"
+            }
+        ],
+        component: "Layout",
+        hidden: false,
+        meta: {
+            icon: "setting",
+            title: "系统管理"
+        },
+        name: "System",
+        path: "/system",
+        redirect: "noRedirect"
+      }
+  ]
+  message: "success",
+  timestamp: 1605506977055
 }
 
 ```
