[+]添加高程第4版

--- a/frontend/日期时间笔记.md
+++ b/frontend/日期时间笔记.md
@@ -20,6 +20,29 @@ minutes 分钟
 seconds 秒钟
 milliseconds 毫秒
 
+根据结束时间计算出当前时间距离结束还有多少
+
+```js
+export function parseTimeData(time) {
+  const SECOND = 1000;
+  const MINUTE = 60 * SECOND;
+  const HOUR = 60 * MINUTE;
+  const DAY = 24 * HOUR;
+  const days = Math.floor(time / DAY); // eslint-disable-line no-unused-vars
+  const hours = Math.floor((time % DAY) / HOUR);
+  const minutes = Math.floor((time % HOUR) / MINUTE);
+  const milliseconds = Math.floor(time % SECOND);
+
+  return { days, hours, minutes, milliseconds }
+}
+
+const data = new Date('2021-05-20'); // 结束时间
+const now = new Date(); // 当前时间
+const obj = parseTimeData(data.getTime() - now.getTime());
+
+console.log(obj); // { days: 29, hours: 12, minutes: 32, milliseconds: 559 }
+
+```
 
 #### 倒计时
 
