--- a/life/班主任.md
+++ b/life/班主任.md
@@ -7,7 +7,11 @@
 记得61儿童节还没来的时候，学校要举行一年一次的队游。
 学校通知每个年级选出几名学生参加培训，少游丈让我去参加了，这一点我至今记忆犹新
 
-林朝冰
+**林朝冰**
+我们村的两间小卖部是不收硬币的，觉得收硬币花不出去
+升初中后，有一次拿着硬币去老师家买东西，跟老师找了声招呼，
+
+
 张惠娟
 庄华扬
 
