--- a/frontend/常用正则表达式.md
+++ b/frontend/常用正则表达式.md
@@ -32,3 +32,12 @@ const isWindows = function () {
 };
 
 ```
+
+
+#### 只能为数字
+
+```js
+const reg = /[^\d]/g;
+
+const regs = /^(\d+[,])*(\d+)$/; // 只能为数字+逗号
+```
