--- a/life/班主任.md
+++ b/life/班主任.md
@@ -13,11 +13,21 @@
 
 
 张惠娟
+五年级第一学期的班主任，教我们班英语课。
+
+
 庄华扬
+六年级班主任，斯文学者模样，寸头，喜欢开太子车。
+字写的好看，作文点评那里可以看出。
+改作业的时候喜欢转笔，也就在那个时候学起了转笔。
+
 
 初中时期
+
 陈登发
+
 黄勇
 
 
 高艳萍
+这是我读中专时候的班主任，
