--- a/frontend/md/深浅拷贝有哪些方式.md
+++ b/frontend/md/深浅拷贝有哪些方式.md
@@ -2,43 +2,41 @@
 - Object.create();
 - JSON.parse() 和 JSON.stringify()
 
-
 #### 深拷贝与浅拷贝理解：
-假设B复制了A，当修改A时，看B是否会发生变化，如果B也跟着变了，说明这是浅拷贝；如果B没有变，那就是深拷贝
 
+假设 B 复制了 A，当修改 A 时，看 B 是否会发生变化，如果 B 也跟着变了，说明这是浅拷贝；如果 B 没有变，那就是深拷贝
 
 #### 遍历赋值方式
 
 ```js
 var obj = {
-    a: 'hello',
-    b: {
-        a: 'world',
-        b: 111
-    },
-    c: [11, 'Jack', 'Tom']
-}
+  a: "hello",
+  b: {
+    a: "world",
+    b: 111,
+  },
+  c: [11, "Jack", "Tom"],
+};
 
 function simpleClone(objNew) {
-    var obj = {};
-    for (var i in objNew) {
-        obj[i] = objNew[i];
-    }
-    return obj;
+  var obj = {};
+  for (var i in objNew) {
+    obj[i] = objNew[i];
+  }
+  return obj;
 }
 // 浅拷贝
 var objCopy = simpleClone(obj);
-objCopy.b.a = 'world1';
+objCopy.b.a = "world1";
 console.log(obj);
 console.log(objCopy);
-
 ```
 
 #### Object.create()
 
 ```js
 var objCopy = Object.create(obj);
-objCopy.b.a = 'world1';
+objCopy.b.a = "world1";
 console.log(obj);
 console.log(objCopy);
 ```
@@ -47,19 +45,19 @@ console.log(objCopy);
 
 ```js
 function deepClone(startObj, endObj) {
-    var obj = endObj || {};
-    for (var i in startObj) {
-        if (typeof startObj[i] === 'object') {
-            startObj[i].constructor === Array ? [] : {};
-            deepClone(startObj[i], obj[i]);
-        } else {
-            obj[i] = startObj[i];
-        }
+  var obj = endObj || {};
+  for (var i in startObj) {
+    if (typeof startObj[i] === "object") {
+      startObj[i].constructor === Array ? [] : {};
+      deepClone(startObj[i], obj[i]);
+    } else {
+      obj[i] = startObj[i];
     }
-    return obj;     
+  }
+  return obj;
 }
 var objCopy = deepClone(obj);
-objCopy.b.a = 'world1';
+objCopy.b.a = "world1";
 console.log(obj);
 console.log(objCopy);
 ```
@@ -68,8 +66,8 @@ console.log(objCopy);
 
 ```js
 var objCopy = JSON.parse(JSON.stringify(obj));
-objCopy.b.a = 'world1';
-objCopy.c[0] = '222';
+objCopy.b.a = "world1";
+objCopy.c[0] = "222";
 console.log(obj);
 console.log(objCopy);
 ```
