--- a/frontend/md/变量和函数提升.md
+++ b/frontend/md/变量和函数提升.md
@@ -2,8 +2,34 @@
 js的解释执行
 ---
 
-js的解释引擎：词法分析-》语法分析-》语法树
+js 的解释引擎：词法分析-》语法分析-》语法树
 
+var 声明会被拿到函数或者全局作用域的顶部，位于作用域中所有的代码之前。
+这个现象叫做提升(hoisting)。提升让同一作用域中的代码不必考虑变量是否已经声明就可以直接使用。可是在实践中，提升也会导致合法却奇怪的现象，即在变量声明之前使用变量。
+
+下面是全局作用域中两段等价的代码
+
+```js
+var name = "Jack";
+
+// 等价于
+var name;
+name = "Jack";
+```
+
+下面是两个等价的函数
+
+```js
+function fn1() {
+  var name = "Jack";
+}
+
+// 等价于
+function fn2() {
+  var name;
+  name = "Jack";
+}
+```
 
 ```js
 console.log(a);
@@ -12,13 +38,12 @@ var a = 10;
 function fn() {}
 
 function test() {
-    a = 100;
-    console.log(a);
-    var a; // var声明会提前，会提前声明到当前作用域的最前面
-    console.log(a); // 100
-    console.log(fn);
+  a = 100;
+  console.log(a);
+  var a; // var声明会提前，会提前声明到当前作用域的最前面
+  console.log(a); // 100
+  console.log(fn);
 }
 test();
 console.log(a); // 10 函数内的局部变量已被释放，而且作用域到不了外面
-
 ```
