--- a/frontend/javaScript/函数/防抖和节流.md
+++ b/frontend/javaScript/函数/防抖和节流.md
@@ -2,9 +2,9 @@
 
 - [实例解析防抖动（Debouncing）和节流阀（Throttling）](http://www.css88.com/archives/7010)
 
-节流和防抖都是用来控制某些函数的调用频率的
+**节流和防抖都是用来控制某些函数的调用频率的**
 
-#### throttle
+#### 节流(throttle)
 
 规定在一个单位时间内，只能触发一次函数，如果这个单位时间内触发多次函数，只有一次生效。
 
