--- a/frontend/javaScript/函数/防抖和节流.md
+++ b/frontend/javaScript/函数/防抖和节流.md
@@ -11,19 +11,26 @@
 > 典型的案例就是鼠标不断点击触发，规定在 n 秒内多次点击只生效一次。
 
 ```js
-function throttle(func, delay) {
-  let timer = null;
-  if (!timer) {
-    return function () {
-      func.apply(this, arguments);
-      timer = setTimeout(() => {
-        timer = null;
-      }, delay);
-    };
-  } else {
-    console.log("上一个定时器还没有完成");
-  }
-}
+const throttle = (fn, wait) => {
+  let inThrottle, lastFn, lastTime;
+  return function() {
+    const context = this,
+      args = arguments;
+    if (!inThrottle) {
+      fn.apply(context, args);
+      lastTime = Date.now();
+      inThrottle = true;
+    } else {
+      clearTimeout(lastFn);
+      lastFn = setTimeout(function() {
+        if (Date.now() - lastTime >= wait) {
+          fn.apply(context, args);
+          lastTime = Date.now();
+        }
+      }, Math.max(wait - (Date.now() - lastTime), 0));
+    }
+  };
+};
 ```
 
 ##### 防抖(debounce)：
@@ -34,7 +41,7 @@ function throttle(func, delay) {
 
 ```js
 function debounce(func, delay) {
-  var timeout;
+  let timeout;
   return function () {
     clearTimeout(timeout);
     timeout = setTimeout(() => {
@@ -43,3 +50,5 @@ function debounce(func, delay) {
   };
 }
 ```
+
+> Tips：我记这个很容易把两者弄混，总结了个口诀，就是 DTTV（Debounce Timer Throttle Variable - 防抖靠定时器控制，节流靠变量控制）。
