--- a/frontend/javaScript/函数/深拷贝和浅拷贝.md
+++ b/frontend/javaScript/函数/深拷贝和浅拷贝.md
@@ -2,6 +2,16 @@
 - Object.create();
 - JSON.parse() 和 JSON.stringify()
 
+#### 浅拷贝
+```js
+const a = { age: 2021 };
+const b = Object.assign({}, a);
+
+a.age = 2022;
+console.log(b.age); // 2021
+
+```
+
 #### 深拷贝与浅拷贝理解：
 
 假设 B 复制了 A，当修改 A 时，看 B 是否会发生变化，如果 B 也跟着变了，说明这是浅拷贝；如果 B 没有变，那就是深拷贝
