--- a/frontend/javaScript/函数/防抖和节流.md
+++ b/frontend/javaScript/函数/防抖和节流.md
@@ -13,7 +13,7 @@
 ```js
 const throttle = (fn, wait) => {
   let inThrottle, lastFn, lastTime;
-  return function() {
+  return function () {
     const context = this,
       args = arguments;
     if (!inThrottle) {
@@ -22,7 +22,7 @@ const throttle = (fn, wait) => {
       inThrottle = true;
     } else {
       clearTimeout(lastFn);
-      lastFn = setTimeout(function() {
+      lastFn = setTimeout(function () {
         if (Date.now() - lastTime >= wait) {
           fn.apply(context, args);
           lastTime = Date.now();
@@ -31,6 +31,20 @@ const throttle = (fn, wait) => {
     }
   };
 };
+
+// 简洁版
+function throttle(f, wait) {
+  let timer;
+  return (...args) => {
+    if (timer) {
+      return;
+    }
+    timer = setTimeout(() => {
+      f(...args);
+      timer = null;
+    }, wait);
+  };
+}
 ```
 
 ##### 防抖(debounce)：
