--- a/frontend/npm/常用命令.md
+++ b/frontend/npm/常用命令.md
@@ -1,4 +1,11 @@
-**常用命令**
+#### 常用命令
 
 npm i -D  软件开发依赖
 npm i -S  软件生产依赖
+
+查看源
+`npm config get registry`
+
+更换源
+`npm config set registry https://registry.npmjs.org`
+`npm config set registry https://registry.npm.taobao.org`
