--- a/frontend/javaScript/函数/闭包.md
+++ b/frontend/javaScript/函数/闭包.md
@@ -1,7 +1,38 @@
-**MDN 上的解释**
+#### MDN
+
 一个函数和对其周围状态（lexical environment，词法环境）的引用捆绑在一起（或者说函数被引用包围），这样的组合就是闭包（closure）。也就是说，闭包让你可以在一个内层函数中访问到其外层函数的作用域。在 JavaScript 中，每当创建一个函数，闭包就会在函数创建的同时被创建出来。
 
+#### JavaScript高级程序设计
+
+闭包是指有权访问另一个函数作用域中的变量的函数
+
+#### 你不知道的JavaScript
+
+当函数可以记住并访问所在的词法作用域时，就产生了闭包，即使函数是在当前词法作用域之外执行
+
 **闭包就是用来解决返回一个函数之后的上下文问题**
+
+**闭包我的理解就是一个函数里再定义一个函数，因为函数本身有自己的作用域，所以内部定义的那个函数可以访问它外部的的那个函数**
+
+**先闭包正确的定义是：假如一个函数能访问外部的变量，那么这个函数它就是一个闭包，而不是一定要返回一个函数。**
+
+闭包用途
+ - 能够访问函数定义时所在的词法作用域(阻止其被回收)
+ - 私有化变量
+ - 模拟块级作用域
+ - 创建模块
+
+闭包缺点：会导致函数的变量一直保存在内存中，过多的闭包可能会导致内存泄漏
+
+好处：
+变量常驻内存，对于实现某些业务很有帮助，比如计数器之类的。
+架起了一座桥梁，让函数外部访问函数内部变量成为可能。
+私有化，一定程序上解决命名冲突问题，可以实现私有变量。
+
+缺陷是：
+他的变量常驻在内存中，其占用内存无法被 GC 回收，导致内存溢出。
+注意，闭包的原理是作用域链，所以闭包访问的上级作用域中的变量是个对象，其值为其运算结束后的最后一个值。
+
 
 下面这是一个闭包的例子
 
@@ -69,16 +100,3 @@ for (var i = 0; i < childElem.length; i++) {
   childElem[i].onclick = handle(i);
 }
 ```
-
-闭包我的理解就是一个函数里再定义一个函数，因为函数本身有自己的作用域，所以内部定义的那个函数可以访问它外部的的那个函数
-
-首先闭包正确的定义是：假如一个函数能访问外部的变量，那么这个函数它就是一个闭包，而不是一定要返回一个函数。
-
-好处：
-变量常驻内存，对于实现某些业务很有帮助，比如计数器之类的。
-架起了一座桥梁，让函数外部访问函数内部变量成为可能。
-私有化，一定程序上解决命名冲突问题，可以实现私有变量。
-
-缺陷是：
-他的变量常驻在内存中，其占用内存无法被 GC 回收，导致内存溢出。
-注意，闭包的原理是作用域链，所以闭包访问的上级作用域中的变量是个对象，其值为其运算结束后的最后一个值。
