--- a/frontend/javaScript/函数/深拷贝和浅拷贝.md
+++ b/frontend/javaScript/函数/深拷贝和浅拷贝.md
@@ -54,6 +54,19 @@ console.log(objCopy);
 深拷贝
 
 ```js
+function deepClone(obj) {
+  if (!obj || typeof obj !== 'object') {
+    return;
+  }
+  let newObj = Array.isArray(obj) ? [] : {};
+  for (let key in obj) {
+    if (obj.hasOwnProperty(key)) {
+      newObj[key] = typeof obj[key] === 'object' ? deepClone(obj[key]) : obj[key];
+    }
+  }
+  return newObj;
+}
+
 function deepClone(startObj, endObj) {
   var obj = endObj || {};
   for (var i in startObj) {
