--- a/frontend/javaScript/函数/防抖和节流.md
+++ b/frontend/javaScript/函数/防抖和节流.md
@@ -2,7 +2,8 @@
 
 #### 节流(throttle)
 
-规定在一个单位时间内，只能触发一次函数，如果这个单位时间内触发多次函数，只有一次生效。
+- 规定在一个单位时间内，只能触发一次函数，如果这个单位时间内触发多次函数，只有一次生效。
+- n 秒内只运行一次，若在 n 秒内重复触发，只有一次生效
 
 > 典型的案例就是鼠标不断点击触发，规定在 n 秒内多次点击只生效一次。
 
@@ -45,9 +46,11 @@ function throttle(f, wait) {
 
 ##### 防抖(debounce)：
 
-在事件被触发 n 秒后再执行回调，如果在这 n 秒内又被触发，则重新计时。
+- 在事件被触发 n 秒后再执行回调，如果在这 n 秒内又被触发，则重新计时。
+- n 秒内执行该事件，若在 n 秒内被重复触发，则重新计时
 
 > 典型的案例就是输入框搜索：输入结束后 n 秒才进行搜索请求，n 秒内又输入的内容，则重新计时。
+> 手机号输入，邮箱验证检测 oninput onchange 事件
 
 ```js
 function debounce(func, delay) {
