--- a/frontend/javaScript/函数/闭包.md
+++ b/frontend/javaScript/函数/闭包.md
@@ -16,6 +16,13 @@
 
 **先闭包正确的定义是：假如一个函数能访问外部的变量，那么这个函数它就是一个闭包，而不是一定要返回一个函数。**
 
+#### 维基百科：
+闭包（Closure）是词法闭包（Lexical Closure）的简称，是引用了自由变量的函数。这个被引用的自由变量将和这个函数一同存在，即使已经离开了创造它的环境也不例外。
+
+
+
+参照例子 理解下吧。
+
 闭包用途
  - 能够访问函数定义时所在的词法作用域(阻止其被回收)
  - 私有化变量
