--- a/frontend/vue/md/组件间如何通信.md
+++ b/frontend/vue/md/组件间如何通信.md
@@ -2,8 +2,6 @@
 组件间如何通信
 ---
 
-
-
 #####  父子组件通信
 
 1. props + emit
@@ -31,12 +29,12 @@ export default {
 
 ```
 
-2. $refs + $parent
-3. provider/inject
+2. `$refs` + `$parent`
+3. `provider`/`inject`
 
 ##### 兄弟组件通信
 
-1. eventBus
+1. `eventBus`
 
 ```js
 import Vue from 'vue';
@@ -51,4 +49,4 @@ bus.$emit('collapse', { key: 'value' });
 
    
 
-2. $parent.$refs
+2. `$parent.$refs`
