--- a/frontend/npm/常用命令.md
+++ b/frontend/npm/常用命令.md
@@ -1,11 +1,18 @@
 #### 常用命令
 
-npm i -D  软件开发依赖
-npm i -S  软件生产依赖
+```shell
 
-查看源
-`npm config get registry`
+npm i -D  # 软件开发依赖
+npm i -S  # 软件生产依赖
 
-更换源
-`npm config set registry https://registry.npmjs.org`
-`npm config set registry https://registry.npm.taobao.org`
+npm outdated         # 先查询有哪些包有更新
+
+npm update <package> # 更新指定包
+
+npm config get registry # 查看源
+
+npm config set registry https://registry.npmjs.org # 更换源
+
+npm config set registry https://registry.npm.taobao.org # 更换源
+
+```
