--- a/frontend/typeScript/类型别名.md
+++ b/frontend/typeScript/类型别名.md
@@ -1,4 +1,8 @@
-// 类型别名用来给一个类型起个新名字
+
+类型别名用来给一个类型起个新名字
+
+
+```ts
 type Name = string;
 
 type NameResolver = () => string;
@@ -6,9 +10,10 @@ type NameResolver = () => string;
 type NameOrResolver = Name | NameResolver;
 
 function getName(n: NameOrResolver): Name {
-  if (typeof n === 'string') {
+  if (typeof n === "string") {
     return n;
   } else {
     return n();
   }
 }
+```
