--- a/frontend/md/常见函数的四种类型有哪些.md
+++ b/frontend/md/常见函数的四种类型有哪些.md
@@ -25,14 +25,14 @@
 // 异步回调，通过回调函数执行返回结果
 function getPrice(params, callback) {
   $.ajax({
-    url: "",
-    type: "post",
+    url: '',
+    type: 'post',
     data: { field: params },
     async: true,
     success: function (data) {
       var result = data;
       callback(result);
-    },
+    }
   });
 }
 ```
