--- a/frontend/javaScript/es6/类.md
+++ b/frontend/javaScript/es6/类.md
@@ -115,3 +115,15 @@ myMaple.gattherSyrup();
 myMaple.changeSeason('spring');
 
 ```
+
+#### 静态方法 static
+静态方法调用直接在类上进行，不能在类的实例上调整。
+静态方法通常用于创建实用程序函数。
+
+```js
+class StaticMethodCall {
+  static staticMethod() {
+    return '';
+  }
+}
+```
