--- a/frontend/javaScript/md/作用域和值类型引用类型的传递.md
+++ b/frontend/javaScript/md/作用域和值类型引用类型的传递.md
@@ -6,11 +6,11 @@ function Persion(name, age, salary) {
 }
 
 function fn(persion) {
-  persion.name = "ls";
-  persion = new Persion("ww", 18, 10);
+  persion.name = 'ls';
+  persion = new Persion('ww', 18, 10);
 }
 
-let p = new Persion("zs", 18, 100);
+let p = new Persion('zs', 18, 100);
 console.log(p.name); // zs
 fn(p);
 console.log(p.name); // ls
