--- a/frontend/javaScript/md/定义类的4种方法.md
+++ b/frontend/javaScript/md/定义类的4种方法.md
@@ -22,7 +22,7 @@ function Person(name, age) {
     alert(this.name);
   };
 }
-const person = new Person("Jack", 34);
+const person = new Person('Jack', 34);
 ```
 
 #### 原型方法
@@ -32,11 +32,11 @@ function Person() {}
 
 Person.propotype = {
   constructor: Person,
-  name: "Jack",
+  name: 'Jack',
   age: 35,
   sayHello: function () {
     alert(this.name);
-  },
+  }
 };
 ```
 
@@ -52,6 +52,6 @@ Person.propotype = {
   constructor: Person,
   sayHello: function () {
     alert(this.name);
-  },
+  }
 };
 ```
