--- a/frontend/javaScript/函数/深拷贝和浅拷贝.md
+++ b/frontend/javaScript/函数/深拷贝和浅拷贝.md
@@ -3,13 +3,13 @@
 - JSON.parse() 和 JSON.stringify()
 
 #### 浅拷贝
+
 ```js
 const a = { age: 2021 };
 const b = Object.assign({}, a);
 
 a.age = 2022;
 console.log(b.age); // 2021
-
 ```
 
 #### 深拷贝与浅拷贝理解：
@@ -20,12 +20,12 @@ console.log(b.age); // 2021
 
 ```js
 var obj = {
-  a: "hello",
+  a: 'hello',
   b: {
-    a: "world",
-    b: 111,
+    a: 'world',
+    b: 111
   },
-  c: [11, "Jack", "Tom"],
+  c: [11, 'Jack', 'Tom']
 };
 
 function simpleClone(objNew) {
@@ -37,7 +37,7 @@ function simpleClone(objNew) {
 }
 // 浅拷贝
 var objCopy = simpleClone(obj);
-objCopy.b.a = "world1";
+objCopy.b.a = 'world1';
 console.log(obj);
 console.log(objCopy);
 ```
@@ -46,7 +46,7 @@ console.log(objCopy);
 
 ```js
 var objCopy = Object.create(obj);
-objCopy.b.a = "world1";
+objCopy.b.a = 'world1';
 console.log(obj);
 console.log(objCopy);
 ```
@@ -70,7 +70,7 @@ function deepClone(obj) {
 function deepClone(startObj, endObj) {
   var obj = endObj || {};
   for (var i in startObj) {
-    if (typeof startObj[i] === "object") {
+    if (typeof startObj[i] === 'object') {
       startObj[i].constructor === Array ? [] : {};
       deepClone(startObj[i], obj[i]);
     } else {
@@ -80,7 +80,7 @@ function deepClone(startObj, endObj) {
   return obj;
 }
 var objCopy = deepClone(obj);
-objCopy.b.a = "world1";
+objCopy.b.a = 'world1';
 console.log(obj);
 console.log(objCopy);
 ```
@@ -89,8 +89,8 @@ console.log(objCopy);
 
 ```js
 var objCopy = JSON.parse(JSON.stringify(obj));
-objCopy.b.a = "world1";
-objCopy.c[0] = "222";
+objCopy.b.a = 'world1';
+objCopy.c[0] = '222';
 console.log(obj);
 console.log(objCopy);
 ```
