--- a/frontend/typeScript/接口.md
+++ b/frontend/typeScript/接口.md
@@ -16,7 +16,7 @@ interface interfaceDemo {
 class Person implements interfaceDemo {
   weigth = 178;
   age = 25;
-  name = "Jack";
+  name = 'Jack';
 }
 
 interface Complex {
@@ -40,5 +40,72 @@ interface NumberArray {
 interface RunOption {
   program: string;
   commandline: string[] | string | (() => string);
+}
+
+interface LabelledValue {
+  label: string;
+}
+
+interface GreetingSettings {
+  greeting: string | number;
+  deration?: number;
+  color?: string;
+}
+
+declare function greet(setting: GreetingSettings): void;
+
+interface SystemConfig {
+  attr1: string;
+  attr2: number;
+  func1(): string;
+  func2(): void;
+}
+
+interface ISum {
+  x: number;
+  y?: number;
+  readonly z: number;
+}
+
+interface IBc extends ISum {
+  b: string;
+  c: string;
+}
+
+function sum({ x, y }: ISum): number {
+  return x + y;
+}
+
+interface IFunc {
+  sum: (x: number, y: number) => number;
+}
+
+const d: IFunc = {
+  sum(x: number, y: number): number {
+    return x + y;
+  }
+};
+
+interface ClockInterface {
+  currentTime: Date;
+  setTime(d: Date): void;
+}
+
+class Clock implements ClockInterface {
+  currentTime: Date;
+  constructor() {
+    this.currentTime = new Date();
+  }
+  setTime(d: Date) {
+    this.currentTime = d;
+  }
+}
+
+interface ISelectAttrs {
+  basec?: boolean;
+
+  contentLeft?: string;
+
+  onchange?: (e: Event) => void;
 }
 ```
