--- a/frontend/typeScript/泛型.md
+++ b/frontend/typeScript/泛型.md
@@ -9,3 +9,23 @@ Stack<number> Closed Type (封闭类型)
 在运行时，所有的泛型类型实例都是封闭的(占位符类型已经被填充了)
 
 ### 为什么泛型会出现？
+
+#### 泛型约束
+
+```ts
+// 由于事先不知道它是哪种类型，所以不能随意操作它的属性或方法
+function loggingIdentity<T>(arg: T): T {
+  console.log(arg.length);
+  return arg;
+}
+
+// 泛型约束
+interface Lengthwise {
+  length: number;
+}
+
+function loggingIdentity<T extends Lengthwise>(arg: T): T {
+  console.log(arg.length);
+  return arg;
+}
+```
