--- a/frontend/typeScript/类.md
+++ b/frontend/typeScript/类.md
@@ -8,14 +8,14 @@
 `readonly` 只读
 `static` 静态属性或方法
 
-
 ##### 示例
 
 ```ts
 class StaticMem {
+  // 静态属性
   public static num: number;
   public static(): void {
-    console.log("num值为" + StaticMem.num);
+    console.log('num值为' + StaticMem.num);
   }
 }
 
@@ -24,6 +24,7 @@ class Greeters {
   constructor(message: string) {
     this.greeting = message;
   }
+  // 实例方法
   greet() {
     return `Hello ${this.greeting}`;
   }
@@ -31,20 +32,17 @@ class Greeters {
 
 // abstract 表示该类是抽象类
 abstract class Animal {
-  constructor(
-    public name: string,
-    private age: number,
-    protected sex: string
-  ) {}
+  constructor(public name: string, private age: number, protected sex: string) {}
 
   abstract makeSound(): void;
-
+  // 实例方法
   move(): void {
-    console.log("roaming the earch");
+    console.log('roaming the earch');
   }
 }
 
 class Book {
+  // 实例属性
   name: string | undefined;
   price: number | undefined;
   surplus: number | undefined;
@@ -79,21 +77,21 @@ export class QuestionBase<T> {
     } = {}
   ) {
     this.value = options.value;
-    this.key = options.key || "";
-    this.label = options.label || "";
+    this.key = options.key || '';
+    this.label = options.label || '';
     this.required = !!options.required;
     this.order = options.order === undefined ? 1 : options.order;
-    this.controlType = options.controlType || "";
+    this.controlType = options.controlType || '';
   }
 }
 
 export class TextboxQuestion extends QuestionBase<string> {
-  controlType = "textbox";
+  controlType = 'textbox';
   type: string;
 
   constructor(options: {} = {}) {
     super(options);
-    this.type = options["type"] || "";
+    this.type = options['type'] || '';
   }
 }
 ```
