--- a/frontend/javaScript/md/检查某对象是否有某属性.md
+++ b/frontend/javaScript/md/检查某对象是否有某属性.md
@@ -6,7 +6,7 @@
 
 ```javascript
 let obj = {
-  name: "Mdn",
+  name: 'Mdn'
 };
 //
 if (obj.name) {
@@ -19,28 +19,28 @@ if (obj.name) {
 
 ```javascript
 let obj = {
-  name: "Mdn",
+  name: 'Mdn'
 };
 
-obj.hasOwnProperty("name"); // true
+obj.hasOwnProperty('name'); // true
 
-"name" in obj; // true
+'name' in obj; // true
 
-obj.hasOwnProperty("valueOf"); // false, valueOf 继承自原型链
-"valueOf" in obj; // true
+obj.hasOwnProperty('valueOf'); // false, valueOf 继承自原型链
+'valueOf' in obj; // true
 ```
 
 两者检查属性的深度不同，换言之 hasOwnProperty 只在本身有此属性时返回 true,而 in 操作符不区分属性来自于本身或继承自原型链。
 
 ```javascript
 var myFunc = function () {
-  this.name = "@tips_js";
+  this.name = '@tips_js';
 };
-myFunc.prototype.age = "10 days";
+myFunc.prototype.age = '10 days';
 
 var user = new myFunc();
 
-user.hasOwnProperty("name"); // true
+user.hasOwnProperty('name'); // true
 
-user.hasOwnProperty("age"); // false, 因为age来自于原型链
+user.hasOwnProperty('age'); // false, 因为age来自于原型链上
 ```
