--- a/frontend/typeScript/原始数据类型.md
+++ b/frontend/typeScript/原始数据类型.md
@@ -1,11 +1,9 @@
-
-
 #### 基础数据类型
 
 ##### 字符串
 
 ```ts
-let names: string = "bob";
+let names: string = 'bob';
 
 // 使用模板字符串
 let sentence: string = `Hello, my name is ${names}`;
@@ -29,7 +27,7 @@ let age: number = 25;
 第一种，在元素类型后面接上 `[]`，由此表示
 
 ```ts
-let anyList: any[] = [1, 2, { website: "http://xcatliu.com" }];
+let anyList: any[] = [1, 2, { website: 'http://xcatliu.com' }];
 ```
 
 ##### ECMAScript 的内置对象 Boolean、Error、Date、RegExp 等。
@@ -49,7 +47,7 @@ let e: Error = new Error();
 ```ts
 let body: Element = document.body;
 
-let divs: NodeList = document.querySelectorAll("div");
+let divs: NodeList = document.querySelectorAll('div');
 ```
 
 ##### 任意值
