--- a/frontend/javaScript/设计模式/单例模式.md
+++ b/frontend/javaScript/设计模式/单例模式.md
@@ -2,8 +2,8 @@
 class Singleton {
   _count = 0;
   constructor(params = {}) {
-    this.params = params;  
-    if (typeof Singleton.instance === "object") {
+    this.params = params;
+    if (typeof Singleton.instance === 'object') {
       return Singleton.instance;
     }
     Singleton.instance = this;
