--- a/frontend/javaScript/设计模式/发布订阅模式.md
+++ b/frontend/javaScript/设计模式/发布订阅模式.md
@@ -1,4 +1,3 @@
-
 订阅者（Subscriber）把自己想订阅的事件注册（Subscribe）到调度中心（Event Channel），当发布者（Publisher）发布该事件（Publish Event）到调度中心，也就是该事件触发时，由调度中心统一调度（Fire Event）订阅者注册到调度中心的处理代码。
 
 ```js
@@ -21,7 +20,7 @@ class Event {
   // 触发事件，有两个参数，一个是事件名，一个是参数
   dispatchEvent(type, ...params) {
     if (!(type in this.handlers)) {
-      return new Error("未注册该事件");
+      return new Error('未注册该事件');
     }
     this.handlers[type].forEach((handler) => {
       handler(...params);
@@ -30,14 +29,14 @@ class Event {
   // 事件移除（事件名，删除事件，若无第二个参数则删除该事件的订阅和发布）
   removeEventListener(type, handler) {
     if (!(type in this.handlers)) {
-      return new Error("无效事件");
+      return new Error('无效事件');
     }
     if (handler) {
       delete this.handlers[type];
     } else {
       const idx = this.handlers[type].findIndex((ele) => ele === handler);
       if (idx === undefined) {
-        return new Error("无该绑定事件");
+        return new Error('无该绑定事件');
       }
       // 移除事件
       this.handlers[type].splice(idx, 1);
