--- a/frontend/vue/md/组件间如何通信.md
+++ b/frontend/vue/md/组件间如何通信.md
@@ -2,16 +2,14 @@
 组件间如何通信
 ---
 
-#####  父子组件通信
+##### 父子组件通信
 
 1. props + emit
 
-
 ```js
-
 // 子组件
 export default {
-  name: 'childComponent', 
+  name: 'childComponent',
   props: {
     title: String,
     list: {
@@ -19,14 +17,12 @@ export default {
       default: () => []
     }
   }
-}
+};
 ```
 
 ```html
-
 <!-- 父 -->
 <my-component title="hello" :list="[]"></my-component>
-
 ```
 
 2. `$refs` + `$parent`
@@ -41,12 +37,10 @@ import Vue from 'vue';
 export default new Vue();
 
 // 事件监听，事件可以由 vm.$emit 触发
-bus.$on('collapse', params => console.log(params));
+bus.$on('collapse', (params) => console.log(params));
 
 // 触发当前实例上的事件。附加参数都会传给监听器回调。
 bus.$emit('collapse', { key: 'value' });
 ```
-
-   
 
 2. `$parent.$refs`
