--- a/nginx/反向代理基础配置.md
+++ b/nginx/反向代理基础配置.md
@@ -2,11 +2,10 @@
 反向代理基础配置
 ---
 
-将多个server配置文件的信息单独存放，不集中在nginx.conf配置，这样有用助于故障排查
-最后用 #include vhost/*.conf 加载vhost目录下所有配置文件
+将多个 server 配置文件的信息单独存放，不集中在 nginx.conf 配置，这样有用助于故障排查
+最后用 #include vhost/\*.conf 加载 vhost 目录下所有配置文件
 
-> include vhost/*.conf; 
-
+> include vhost/\*.conf;
 
 > 跨域
 
@@ -18,7 +17,7 @@ server {
     # 检查是否存在请求静态文件的gz结尾的文件，如果有则直接返回该gz文件内容，不存在则先压缩再返回
     gzip_static on;
     # any - 无条件启用压缩
-    gzip_proxied any;        
+    gzip_proxied any;
     # 对特定的MIME类型生效,其中'text/html’被系统强制启用
     gzip_types text/javascript application/javascript text/css application/json;
     # 侦听80端口
@@ -30,14 +29,14 @@ server {
 
     location / {
         # 反向代理到 http://dili.bdatu.com
-        proxy_pass http://dili.bdatu.com; 
+        proxy_pass http://dili.bdatu.com;
         add_header Access-Control-Allow-Origin *;
     }
-    
+
     location ~ /(js/*|css/*|img/*|font/*) {
         expires 30d;
         add_header Cache-Control public;
-    }    
+    }
 }
 
 ```
