--- a/politics/如何理解党的几大、几届、几中.md
+++ b/politics/如何理解党的几大、几届、几中.md
@@ -2,7 +2,7 @@
 
 党的几大，是指党的全国代表大会。
 
-按照《中国共产党章程》规定，党的全国代表大会**每五年**举行一次，我们通常简称为“**大”。
+按照《中国共产党章程》规定，党的全国代表大会**每五年**举行一次，我们通常简称为“\*\*大”。
 
 比如“十九大”，就是“中国共产党第十九次全国代表大会”的简称。
 
@@ -26,13 +26,11 @@
 
 一般来说，每一届中央委员会召开一至七次全体会议，分别简称为“一中全会”、“二中全会”、“三中全会”、“四中全会”、“五中全会”等等。
 
-“**届*中全会”，就是这样产生的。比如，“党的十九届四中全会”是“中国共产党第十九届中央委员会第四次全体会议”的简称。
-
-
+“\**届*中全会”，就是这样产生的。比如，“党的十九届四中全会”是“中国共产党第十九届中央委员会第四次全体会议”的简称。
 
 资料拓展
 
-中国共产党自1921年成立以来，至今有了十九届中央委员会。
+中国共产党自 1921 年成立以来，至今有了十九届中央委员会。
 
 一般来说，每届中央委员在五年任期内召开一至七次全体会议，每次全会的任务各有侧重。
 
