--- a/frontend/javaScript/函数/闭包.md
+++ b/frontend/javaScript/函数/闭包.md
@@ -2,11 +2,11 @@
 
 一个函数和对其周围状态（lexical environment，词法环境）的引用捆绑在一起（或者说函数被引用包围），这样的组合就是闭包（closure）。也就是说，闭包让你可以在一个内层函数中访问到其外层函数的作用域。在 JavaScript 中，每当创建一个函数，闭包就会在函数创建的同时被创建出来。
 
-#### JavaScript高级程序设计
+#### JavaScript 高级程序设计
 
 闭包是指有权访问另一个函数作用域中的变量的函数
 
-#### 你不知道的JavaScript
+#### 你不知道的 JavaScript
 
 当函数可以记住并访问所在的词法作用域时，就产生了闭包，即使函数是在当前词法作用域之外执行
 
@@ -17,17 +17,17 @@
 **先闭包正确的定义是：假如一个函数能访问外部的变量，那么这个函数它就是一个闭包，而不是一定要返回一个函数。**
 
 #### 维基百科：
+
 闭包（Closure）是词法闭包（Lexical Closure）的简称，是引用了自由变量的函数。这个被引用的自由变量将和这个函数一同存在，即使已经离开了创造它的环境也不例外。
-
-
 
 参照例子 理解下吧。
 
 闭包用途
- - 能够访问函数定义时所在的词法作用域(阻止其被回收)
- - 私有化变量
- - 模拟块级作用域
- - 创建模块
+
+- 能够访问函数定义时所在的词法作用域(阻止其被回收)
+- 私有化变量
+- 模拟块级作用域
+- 创建模块
 
 闭包缺点：会导致函数的变量一直保存在内存中，过多的闭包可能会导致内存泄漏
 
@@ -39,7 +39,6 @@
 缺陷是：
 他的变量常驻在内存中，其占用内存无法被 GC 回收，导致内存溢出。
 注意，闭包的原理是作用域链，所以闭包访问的上级作用域中的变量是个对象，其值为其运算结束后的最后一个值。
-
 
 下面这是一个闭包的例子
 
@@ -73,12 +72,12 @@ function count() {
     return count++;
   };
 }
-const app = document.getElementById("app");
-let btns = document.getElementsByTagName("button");
+const app = document.getElementById('app');
+let btns = document.getElementsByTagName('button');
 // 遍历所有button元素，并实例化count函数
 Array.from(btns).forEach((item, index) => {
   let b = new count(); // 为每个button元素实例化一个对象
-  item.addEventListener("click", (e) => {
+  item.addEventListener('click', (e) => {
     console.log(b()); // 每次点击加一
   });
 });
@@ -95,7 +94,7 @@ Array.from(btns).forEach((item, index) => {
 ```
 
 ```js
-const list = document.querySelector(".list");
+const list = document.querySelector('.list');
 // 从一个类似数组或可迭代对象创建一个新的，浅拷贝的数组实例
 const childElem = Array.from(list.children);
 function handle(i) {
