--- a/work/环境信息.md
+++ b/work/环境信息.md
@@ -13,36 +13,36 @@ Jenkins
 密码 abc123456
 
 #### 多多
-> 记录一
-开发环境: beta.cdsfl8888.com
-测试环境: betatest.cdsfl8888.com
-预发布环境: 
-正式环境: www.cdsfl8888.com
-http://www.cdsfl8888.com/
 
+> 记录一
+> 开发环境: beta.cdsfl8888.com
+> 测试环境: betatest.cdsfl8888.com
+> 预发布环境:
+> 正式环境: www.cdsfl8888.com > http://www.cdsfl8888.com/
 
 > 记录二 (多多或者憨憨的新域名)
-开发环境:  betaapi.whyd888.com
-测试环境:  testapi.whyd888.com
-预发布环境: releaseapi.whyd888.com
-正式环境: api.whyd888.com
-七牛:  img.whyd888.com
-http://www.whyd888.com
+> 开发环境: betaapi.whyd888.com
+> 测试环境: testapi.whyd888.com
+> 预发布环境: releaseapi.whyd888.com
+> 正式环境: api.whyd888.com
+> 七牛: img.whyd888.com
+> http://www.whyd888.com
 
-+___________________________________________________________________________________________+
++********************\*\*\*\*********************\_\_\_********************\*\*\*\*********************+
 
 #### 笨笨
+
 开发环境: betaapi.benbenapp.com
 预发布环境: releaseapi.benbenapp.com
 正式环境: api.benbenapp.com
-七牛:  img.benbenapp.com
+七牛: img.benbenapp.com
 
 **新后台系统账号**
 用户名: linchang68
 密码: linchang68
 
-
 #### 相依
+
 开发环境: betaapi.cdxx123.com
 预发布环境: releaseapi.cdxx123.com
 正式环境: api.cdxx123.com
