--- a/frontend/typeScript/枚举.md
+++ b/frontend/typeScript/枚举.md
@@ -1,10 +1,8 @@
-
 ##### 枚举
 
 枚举（Enum）类型用于取值被限定在一定范围内的场景，比如一周只能有七天，颜色限定为红绿蓝等
 
 ```ts
-
 enum Days {
   Sun,
   Mon,
@@ -12,7 +10,7 @@ enum Days {
   Wed,
   Thu,
   Fri,
-  Sat,
+  Sat
 }
 
 console.log(Days['Fri'] === 5);
@@ -20,7 +18,6 @@ console.log(Days['Fri'] === 5);
 enum Color {
   Red,
   Green,
-  Blue = 'blue'.length,
+  Blue = 'blue'.length
 }
-
 ```
