--- a/frontend/typeScript/泛型.md
+++ b/frontend/typeScript/泛型.md
@@ -61,15 +61,22 @@ interface SearchFunc {
 
 ```ts
 class Queue<T> {
-  private data = [];
+  private data: T[] = [];
 
-  push = (item: T) => this.data.push(item);
+  constructor() {}
 
-  pop = (): T => this.data.shift();
+  push(item: T) {
+    return this.data.push(item);
+  }
+
+  pop() {
+    this.data.shift();
+  }
 }
 
 const queue = new Queue<number>();
-queue.push(0);
+
+queue.push(2);
 // Error：不能推入一个 `string`，只有 number 类型被允许
 //queue.push("1");
 ```
