--- a/backend/java/中国大学MOOC/Java核心技术(高阶)/2-Java泛型/1-泛型入门.md
+++ b/backend/java/中国大学MOOC/Java核心技术(高阶)/2-Java泛型/1-泛型入门.md
@@ -1,4 +1,4 @@
-泛型 Generic Programming
+泛型 **Generic Programming**
 编写的代码可以被很多不同类型的对象所重用
 
 ```java
@@ -27,3 +27,34 @@ int i = list2.get(1);
 
 - 泛型接口
   List Iterator 等
+
+```java
+
+Iterator<String> iter = list.iterator();
+while(iter.hasNext()) {
+  System.out.println(iter.next());
+}
+
+Iterator<Double> iter2 = list.iterator();
+while(iter.hasNext()) {
+  System.out.println(iter.next());
+}
+
+```
+
+
+泛型的本质: 参数化类型，避免类型转换，代码可复用
+
+
+#### ArrayList 的源码
+
+```java
+
+public class ArrayList<E> extends AbstractList<E> implements List<E>, RandomAccess, Cloneable, java.io.Serializable {
+  public E get(int index) {
+    rankgeCheck(index);
+    return elementData(index);
+  }
+}
+
+```
