--- a/backend/java/中国大学MOOC/Java核心技术(高阶)/2-Java泛型/3-泛型类型限定.md
+++ b/backend/java/中国大学MOOC/Java核心技术(高阶)/2-Java泛型/3-泛型类型限定.md
@@ -1,9 +1,38 @@
 #### 泛型的限定
 
-- <T entends Comparable>约定 T 必须是 Comparable 的子类
+- <T extends Comparable>约定 T 必须是 Comparable 的子类
 - **extends 固定**，后面可以多个，**以&拼接**，如<T extends Comparable & Serializable>
 - extends 限定**可以有多个接口，但只能一个类，且类必须排在第一位**
 - **逗号隔参数**，<T extends Fils & Cloneable, U extends Serializable>
+
+```java
+
+public static <T extends Comparable> T getMin(T... a) {
+    if (null == a || a.length <= 0) {
+        return null;
+    }
+    T min = a[0];
+    for (int i = 0; i < a.length; i++) {
+        if (min.compareTo(a[i]) > 0) {
+            min = a[i];
+        }
+    }
+    return min;
+}
+```
+
+#### 泛型类之间的继承
+- Pair<S> 和 Pair<T> 没有任何关系，无论S和T之间是什么关系
+
+```java
+Pair<Apple> apples = new Pair<>(new Apple(3), new Apple(4));
+Pair<Fruit> = fruits = apples;
+fruits.setFirst(new Orange(5)); 
+
+```
+
+- 泛型类可以扩展或实现其它的类，如 ArrayList<T>，实现List<T>
+
 
 #### 泛型通配符类型
 
